--- a/.github/workflows/eleventy_build.yml
+++ b/.github/workflows/eleventy_build.yml
@@ -16,9 +16,9 @@ jobs:
         with:
           node-version: '14.x'
 
-      - run: npm ci
+      - run: npm install
 
-      - run: npm run build
+      - run: npm run production
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
