--- a/.github/workflows/eleventy_build.yml
+++ b/.github/workflows/eleventy_build.yml
@@ -17,4 +17,4 @@ jobs:
         env:
           PUBLISH_DIR: _site 
           PUBLISH_BRANCH: gh-pages
-          ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ACTIONS_DEPLOY_TOKEN }}
