--- a/.github/workflows/eleventy_build.yml
+++ b/.github/workflows/eleventy_build.yml
@@ -14,8 +14,8 @@ jobs:
       - run: npm install
       - run: npm run build --if-present
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v1.1.0
+        uses: peaceiris/actions-gh-pages@v3
         env:
           PUBLISH_DIR: _site 
           PUBLISH_BRANCH: gh-pages
-          DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ACTIONS_DEPLOY_TOKEN }}
