--- a/.github/workflows/eleventy_build.yml
+++ b/.github/workflows/eleventy_build.yml
@@ -12,7 +12,7 @@ jobs:
         uses: TartanLlama/actions-eleventy@v1.1
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
-        env:
+        with:
           PUBLISH_DIR: _site 
           PUBLISH_BRANCH: gh-pages
           DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
