--- a/.github/workflows/eleventy_build.yml
+++ b/.github/workflows/eleventy_build.yml
@@ -17,4 +17,5 @@ jobs:
           PUBLISH_BRANCH: gh-pages
           DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
       - name: Copy CNAME
-        run: git checkout gh-pages CNAME
+        run: git checkout gh-pages
+        run: git checkout building CNAME
